vpc_base-private-network-simple.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  VpcBlock:
    Type: String
    Default: 172.16.0.0/16 #172.16.0.1 - 172.16.255.254
    Description: Please specify the CIDR range for the VPC.  This should be a valid private (RFC 1918) CIDR range.
  PrivateSubnet01Block:
    Type: String
    Default: 172.16.1.0/24
    Description: the CIDR block for private subnet 01 within the VPC.
  PublicSubnet01Block:
    Type: String
    Default: 172.16.0.0/24
    Description: the CIDR block for private subnet 01 within the VPC.

Resources:
    ##### VPC block #####
    VPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock:  !Ref VpcBlock
        EnableDnsSupport: true
        EnableDnsHostnames: true
        Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-VPC'
    ##### Subnet section #####
    # Private Subnet #
    PrivateSubnet01:
      Type: AWS::EC2::Subnet
      Metadata:
        Comment: Subnet 01
      Properties:
        AvailabilityZone: !Select #This format seems to be valid thus far with CloudFormation - 
          - 0
          - Fn::GetAZs: !Ref 'AWS::Region'
        CidrBlock:
          Ref: PrivateSubnet01Block
        VpcId:
          Ref: VPC
        Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-PrivateSubnet01"
    # Public Subnet #
    PublicSubnet01:
      Type: AWS::EC2::Subnet
      Metadata:
        Comment: Public Subnet 01
      Properties:
        AvailabilityZone: !Select #This format seems to be valid thus far with CloudFormation - 
          - 0
          - Fn::GetAZs: !Ref 'AWS::Region'
        CidrBlock:
          Ref: PublicSubnet01Block
        VpcId:
          Ref: VPC
        Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-PublicSubnet01"
    ###### Internet Gateway section #####
    InternetGateway:
      Type: "AWS::EC2::InternetGateway"
      Properties:
        Tags:
        - Key: Network
          Value: !Sub "${AWS::StackName}-InternetGateway"
    VPCGatewayAttachment: #Attach the Internet Gateway to the VPC
      Type: "AWS::EC2::VPCGatewayAttachment"
      Properties:
        InternetGatewayId: !Ref InternetGateway
        VpcId: !Ref VPC 
    ###### Routing section #####
    PrivateRouteTable01:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
        - Key: Name
          Value: Private Subnet AZ1
        - Key: Network
          Value: !Sub "${AWS::StackName}-PrivateRouteTable01"
    PublicRouteTable01:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
        - Key: Name
          Value: Public Subnet AZ1
        - Key: Network
          Value: !Sub "${AWS::StackName}-PublicRouteTable01"
    PrivateRoute01:
      DependsOn:
      - VPCGatewayAttachment
      - NatGateway01
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PrivateRouteTable01
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NatGateway01
    PublicRoute01:
      DependsOn:
      - VPCGatewayAttachment
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PublicRouteTable01
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref InternetGateway
    PrivateSubnet01RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref PrivateSubnet01
        RouteTableId: !Ref PrivateRouteTable01          
    PublicSubnet01RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref PublicSubnet01
        RouteTableId: !Ref PublicRouteTable01
    ##### NAT Gateway setup #####
    NatGateway01:
      DependsOn:
      - PublicSubnet01
      - NatGatewayEIP1
      - VPCGatewayAttachment
      Type: AWS::EC2::NatGateway
      Properties:
        AllocationId: !GetAtt 'NatGatewayEIP1.AllocationId'
        SubnetId: !Ref PublicSubnet01
        Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NatGateway01'
    NatGatewayEIP1:
      DependsOn:
      - VPCGatewayAttachment
      Type: 'AWS::EC2::EIP'
      Properties:
        Domain: vpc

Outputs:
  SubnetIds:
    Description: Subnets IDs in the VPC
    Value: !Join [ ",", [ !Ref PublicSubnet01, !Ref PrivateSubnet01 ] ]  
  VpcId:
    Description: The VPC Id
    Value: !Ref VPC
